# spellguard

./: .dockerignore  .env.example  .gitignore  .npmrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  biome.json  docker-compose.agntcy.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  tsconfig.json  vitest.config.mts  vitest.integration.config.mts
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
scripts/: dev-agents.sh  seed-test-archives.mjs
slim-config/: server-config.yaml
tests/: action-allowlist-engine.test.ts  bilateral-integration.test.ts  citation-enforcer-engine.test.ts  code-engine.test.ts  conftest.py  contains-engine.test.ts  dsl-engine.test.ts  exfiltration-engine.test.ts  external-engine.test.ts  financial-disclaimer-engine.test.ts  identity-engine.test.ts  injection-engine.test.ts  keyword-engine.test.ts  langchain-chat-model.test.ts  langchain-tool.test.ts  local-policies.test.ts  loop-engine.test.ts  nsfw-blocker-engine.test.ts  openai-tool.test.ts  openai-wrap.test.ts  openclaw-e2e.test.ts  openclaw-gateway-wiring.integration.test.ts  openclaw-integration.test.ts  phi-guardian-engine.test.ts  policy-comms-engine.test.ts  policy-database-engine.test.ts  policy-file-engine.test.ts  policy-memory-engine.test.ts  policy-meta-engine.test.ts  policy-network-engine.test.ts  policy-sdk-competitor-mention.test.ts  policy-sdk-engine.test.ts  policy-sdk-server-integration.test.ts  policy-sdk-server.test.ts  policy-sdk-testing.test.ts  regex-engine.test.ts  (+28 more)
(+37 files in other folders)
